k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sokodigital-api
  labels:
    app: sokodigital
    component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: sokodigital
    component: api
